# mirrornote-emergent

./: PRODUCTION_INTEGRATION_GUIDE.md  README.md  backend_test.py  backend_test_comprehensive.py  model.patch  test_result.md
.emergent/: emergent.yml
backend/: .env  Dockerfile  audio_utils.py  auth.py  feature_extractor.py  payment.py  pyproject.toml  railway.json  requirements.txt  server.py  vad.py
backend/tests/: __init__.py  conftest.py  test_audio_utils.py  test_feature_extractor.py  test_insights_generator.py  test_server.py  test_vad.py
frontend/: .env  app.json  eas.json  package-lock.json  package.json  react-native-razorpay.d.ts
frontend/app/: _layout.tsx  index.tsx  payment.tsx  processing.tsx  recording.tsx  results.tsx
frontend/app/(tabs)/: _layout.tsx  dashboard.tsx  history.tsx  profile.tsx
frontend/app/auth/: login.tsx
frontend/app/context/: AuthContext.tsx
