[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.1",
    "httpx==0.28.1",
    "librosa==0.10.1",
    "motor==3.3.1",
    "numpy==1.26.4",
    "openai==2.7.1",
    "pydantic==2.12.4",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "scipy==1.11.4",
    "slowapi>=0.1.9",
    "soundfile==0.12.1",
    "starlette==0.37.2",
    "uvicorn==0.25.0",
    "webrtcvad==2.0.10",
    "setuptools",
]
